# caster-core

./: .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
casterconfig/: caster.yml
casterplugin/bringme/: __init__.py  base.py  program.py
casterplugin/dictation/: __init__.py
casterplugin/dictation/alphabet/: __init__.py
casterplugin/dictation/control/: __init__.py
casterplugin/dictation/format/: __init__.py  textformat.py
casterplugin/dictation/punctuation/: __init__.py
casterplugin/util/dragonfly/: __init__.py  ccr_rule.py
castervoice/: __init__.py  __main__.py  watcher.py
castervoice/core/: __init__.py  context.py  context_manager.py  controller.py  dependency_manager.py  plugin.py  plugin_manager.py
castervoice/core/plugin/: __init__.py  plugin.py  plugin_manager.py
castervoice/util/dragonfly/: ccr_rule.py
castervoice/web/: __init__.py
config/: caster.yml  default.yml
docs/: Makefile  class_diagram.puml  requirements.txt
docs/source/: about.rst  cli_reference.rst  conf.py  configuration.rst  development.rst  get_started.rst  index.rst  plugin.rst
docs/source/about/: architecture.rst  planned_features.rst  transition.rst
docs/source/configuration/: engine.rst
docs/source/development/: plugin.rst  plugin_manager.rst
docs/source/get_started/: engines.rst
docs/source/plugin/: 1_feature.rst
test/castervoice/core/: test_controller.py  test_plugin.py
